--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -11,24 +11,72 @@
         <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
     </head>
     <body class="container-fluid d-flex flex-column h-100 w-100 text-center p-5">
-        <header class="border">
-            <div class="yj">
-                <h3 class="float-md-start mb-0">여기있대</h3>
-                    <nav class="nav nav-masthead justify-content-center float-md-end">
-                    <a class="nav-link" href="faq">FAQ</a>
-                    <a class="nav-link" href="#">고객센터</a>
-                </nav>
-            </div>
+        <header class="yj">
+            <h3 class="float-md-start mb-0">여기있대</h3>
+            <nav class="nav float-md-end">
+                <a class="nav-link" href="faq">FAQ</a>
+            </nav>
         </header>
 
-        <main class="mt-auto mb-auto yj mx-3 border">
+        <main class="mt-auto mb-auto yj mx-3">
             <h1>찾는 상품이 있으신가요?</h1>
             <input type="text">
             <a href="#" class="btn btn-secondary">검색</a>
         </main>
         
-        <footer class="text-muted border">
-            융합시스템공학종합설계 8조 - 장유정, 장원석, 장재식, 이태희
+        <h3>맞춤 추천</h3>
+        <main class="container-fluid row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            <div class="col">
+                <div class="card shadow-sm">
+                    <svg class="card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#55595c"/>
+                    </svg>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card shadow-sm">
+                    <svg class="card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#55595c"/>
+                    </svg>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card shadow-sm">
+                    <svg class="card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#55595c"/>
+                    </svg>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card shadow-sm">
+                    <svg class="card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#55595c"/>
+                    </svg>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card shadow-sm">
+                    <svg class="card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#55595c"/>
+                    </svg>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card shadow-sm">
+                    <svg class="card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#55595c"/>
+                    </svg>
+                </div>
+            </div>
+        </main>
+
+        <footer class="text-muted">
         </footer>
     </body>
 </html>
