--- a/home/templates/faq.html
+++ b/home/templates/faq.html
@@ -6,9 +6,9 @@
         <title>여기있대 FAQ</title>
 
         <!-- Bootstrap core CSS -->
-        <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
         <!-- Default CSS -->
-        <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     </head>
     <body>
         <nav class="yj container-fluid navbar navbar-expand-md navbar-dark bg-danger mb-5">
