검색창 개발 시작

--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -14,3 +14,10 @@
 .bg-lightGray {
     background-color:#e4e8ec;
 }
+
+/* Search Box */
+.searchBox {
+    border-color:#dc3545;
+    border-radius: 0.25rem;
+    border-style: solid;
+}
