--- a/home/templates/faq.html
+++ b/home/templates/faq.html
@@ -3,7 +3,7 @@
 <html lang="ko" class="h-100 w-100">
     <head>
         <meta charset="utf-8">
-        <title>여기있대 FAQ</title>
+        <title>여기있대 - FAQ</title>
 
         <!-- Bootstrap core CSS -->
         <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
@@ -12,14 +12,21 @@
     </head>
     <body>
         <nav class="yj container-fluid navbar navbar-expand-md navbar-dark bg-danger mb-5">
-            <a class="navbar-brand" href="../">여기있대</a>
+            <a class="navbar-brand" href="../../">여기있대</a>
             <div class="px-3 navbar-collapse justify-content-end">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="../">Home</a>
+                        <a class="nav-link" href="../../">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active">FAQ</a>
+                    </li>
+                    <li class="nav-item">
+                        {% if user.is_authenticated %}
+                        <a class="nav-link" href="{% url 'common:logout' %}">{{ user.username }} (로그아웃)</a>
+                        {% else %}
+                        <a class="nav-link" href="{% url 'common:login' %}">로그인</a>
+                        {% endif %}
                     </li>
                 </ul>
             </div>
