--- a/home/templates/common/signup.html
+++ b/home/templates/common/signup.html
@@ -37,7 +37,7 @@
                 {% csrf_token %}
                 {% include "common/form_errors.html" %}
                 <div class="form-group">
-                    <label for="username">사용자 이름</label>
+                    <label for="username">아이디</label>
                     <input type="text" class="form-control" name="username" id="username"
                         value="{{ form.username.value|default_if_none:'' }}">
                 </div>
@@ -48,13 +48,11 @@
                 </div>
                 <div class="form-group">
                     <label for="password2">비밀번호 확인</label>
-                    <input type="password" class="form-control" name="password2" id="password2"
-                        value="{{ form.password2.value|default_if_none:'' }}">
+                    <input type="password" class="form-control" name="password2" id="password2" value="{{ form.password2.value|default_if_none:'' }}">
                 </div>
                 <div class="form-group">
                     <label for="email">이메일</label>
-                    <input type="text" class="form-control" name="email" id="email"
-                        value="{{ form.email.value|default_if_none:'' }}">
+                    <input type="text" class="form-control" name="email" id="email" value="{{ form.email.value|default_if_none:'' }}">
                 </div><br>
                 <button type="submit" class="btn btn-primary">회원가입</button><br><br>
                 <h6><a href="{% url 'common:login' %}">혹시 계정이 있으신가요?</a></h6>
