--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -13,6 +13,14 @@
         <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
         <!-- Default CSS -->
         <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+
+        <style>
+            li{
+                float: left;
+                margin-right : 5px;
+                list-style-type: none;
+            }
+        </style>
     </head>
     <body class="container-fluid d-flex flex-column h-100 w-100 text-center p-5">
         <header class="yj">
@@ -59,7 +67,16 @@
                 <div id="collapseTwo" class="collapse" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         {% if user.is_authenticated %}
-                            System : 로그인 확인! 맞춤 상품 개발 예정
+			                <!--{{user}} 님의 추천 제품<br/>-->
+                            <strong>
+                                <ul>
+                                    <li>바삭 통다리 치킨</br><img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxNzAxMDJfOSAg%2FMDAxNDgzMzMwNTAwNTgw.N-ReJlH9kA8XFCXWESVXNR0mszgZQYBwGV-Kz18AJVQg.8Lo-ItcHcOAc1k3IpnPxZS59yZBTmT6MgACqeoYgW08g.JPEG.kdhrc0306%2F20170102_123148.jpg&type=ofullfill340_600" width="150" height="150"><br/></li>
+                                    <li>알찬 도시락</br><img src="https://postfiles.pstatic.net/MjAxODA2MDlfMTY4/MDAxNTI4NTUwMzg1ODgy.0Aer5WHfmCZ7Q2RD3HQ_aZC4GaDwH3V8yCWje0FIS64g.dWVfEqf57IKMhi1UFR_cqpzf6cN8n__1cd6KtuChsQkg.JPEG.hmlee68/20180608_194244.jpg?type=w773" width="150" height="150"><br/></li>
+                                    <li>숯불 고기 김밥</br><img src="https://postfiles.pstatic.net/MjAxNzA4MDNfMTkx/MDAxNTAxNzI1NzY1MjY5.6y0m4YJ5_VWLqIiICATRLgWa83J8Yc8VNushnBnjnF4g.qZW_IvTm1PHhyVyVV4XxdSrLWNWxGKp-jnwblRkfq-Eg.JPEG.oxsh29fqqo/P20170524_113524887_21735CDF-D5FE-454B-8BF9-D8626200CAB8.JPG?type=w1" width="150" height="150"><br/></li>
+                                    <li>김치 왕교자 그라탕</br><img src="https://postfiles.pstatic.net/MjAxNzA0MTBfNjIg/MDAxNDkxODExNTI2MzAw.fR60jOmdI70WFhXn80prcF3iQFnFR6AhIYjFEKl7lQUg.P9LZ7ElcYkijFvI4bHQQwhlUA8GMsVSAlOE4cIAP7t4g.JPEG.ipapeo/photo_1491468476.jpg?type=w966" width="150" height="150"><br/></li>
+                                    <li>치즈 콘닭</br><img src="https://postfiles.pstatic.net/MjAxNzEwMDlfMTE5/MDAxNTA3NTQ2MzgwODI3.HHazlfm5YEvpviJd33JT03yt2aL68VAQ5f30ipCphMkg.cMJmStaWcUH_At2T-bZtsLupTfDuiT_2iZGOxl63qeog.JPEG.bingbbing1/2017-10-06-00-12-41.jpg?type=w966" width="150" height="150"><br/></li>
+                                </ul>
+		                    </strong>
                         {% else %}
                             로그인을 하면 맞춤 상품을 추천받을 수 있습니다.
                         {% endif %}
