--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -15,6 +15,11 @@
         <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
         <style>
+	    ul {
+		display: table;
+		margin-left: auto;
+		margin-right: auto;
+	    }
             li{
                 float: left;
                 margin-right : 5px;
