인기상품/맞춤상품 수정

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -47,30 +47,30 @@
                 <div id="collapseOne" class="collapse" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <strong>현재 가장 인기있는 상품!<br/><br/></strong>
-                         <table style="border: 1px solid red; width:60%; height: 100px; margin: auto; text-align: center;">
+                         <table style="border: 2px solid black; width:60%; height: 100px; margin: auto; text-align: center;">
                             <tr>
-                                <td style="border: 2px solid red;">
-                                    <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxNzAxMDJfOSAg%2FMDAxNDgzMzMwNTAwNTgw.N-ReJlH9kA8XFCXWESVXNR0mszgZQYBwGV-Kz18AJVQg.8Lo-ItcHcOAc1k3IpnPxZS59yZBTmT6MgACqeoYgW08g.JPEG.kdhrc0306%2F20170102_123148.jpg&type=ofullfill340_600" width="150" height="150">
+                                <td style="border: 3px solid black;">
+                                    <img src="https://postfiles.pstatic.net/MjAyMDEwMTBfMTE3/MDAxNjAyMzAwOTgwMDk3.gFvAN5oMuyqeTu7ty1TU6O9I8N-8KYfhjfHZ-hWatNwg.SE2TYUoX8_2TMSfvhMahl_RPgWlXOQeK3hpuEH6hexkg.JPEG.sun922002/1602300980664.JPG?type=w580" width="150" height="150">
                                 </td>
-                                <td style="border: 2px solid red;">
-                                    <img src="https://postfiles.pstatic.net/MjAxODA2MDlfMTY4/MDAxNTI4NTUwMzg1ODgy.0Aer5WHfmCZ7Q2RD3HQ_aZC4GaDwH3V8yCWje0FIS64g.dWVfEqf57IKMhi1UFR_cqpzf6cN8n__1cd6KtuChsQkg.JPEG.hmlee68/20180608_194244.jpg?type=w773" width="150" height="150">
+                                <td style="border: 3px solid black;">
+                                    <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMTA0MjdfNTkg%2FMDAxNjE5NDkwMTgyMDAw.WqOKJs-cyDAhSqs9JLmec4dtLAfPkSv8n41OKWf7BM8g.xXdv8k946i0KlBbvBVtflTFhh3iVdtRfX-V5zp-1R9Mg.JPEG.wonnie1022%2F1619490169391.jpg&type=sc960_832" width="150" height="150">
                                 </td>
-                                <td style="border: 2px solid red;">
-                                    <img src="https://postfiles.pstatic.net/MjAxNzA4MDNfMTkx/MDAxNTAxNzI1NzY1MjY5.6y0m4YJ5_VWLqIiICATRLgWa83J8Yc8VNushnBnjnF4g.qZW_IvTm1PHhyVyVV4XxdSrLWNWxGKp-jnwblRkfq-Eg.JPEG.oxsh29fqqo/P20170524_113524887_21735CDF-D5FE-454B-8BF9-D8626200CAB8.JPG?type=w1" width="150" height="150">
+                                <td style="border: 3px solid black;">
+                                    <img src="https://postfiles.pstatic.net/MjAyMDEwMTBfMTM0/MDAxNjAyMzMzNjg4MDUx.II9YGiYWf-qD3mhbHFaEK3tdFi124TnIHb_AiZN7c0og.bNVhx5b9GciiEvpg1y2l1njv9aagnU93AlE3jSEgs4Ug.JPEG.cjjjj_2/1602333687626.jpg?type=w966" width="150" height="150">
                                 </td>
-                                <td style="border: 2px solid red;">
-                                    <img src="https://postfiles.pstatic.net/MjAxNzA0MTBfNjIg/MDAxNDkxODExNTI2MzAw.fR60jOmdI70WFhXn80prcF3iQFnFR6AhIYjFEKl7lQUg.P9LZ7ElcYkijFvI4bHQQwhlUA8GMsVSAlOE4cIAP7t4g.JPEG.ipapeo/photo_1491468476.jpg?type=w966" width="150" height="150">
+                                <td style="border: 3px solid black;">
+                                    <img src="https://postfiles.pstatic.net/MjAyMDEwMTBfMTk0/MDAxNjAyMzMzNjk0MTcx.MiUMp9-MMHxITzJSvS2WWREoI3U0uENwlx2oQD_MIh4g.yuF9DvjXsdCZs_MVNvSgY2PmqK-AArUbuEcBY2EYPk0g.JPEG.cjjjj_2/1602333693709.jpg?type=w966" width="150" height="150">
                                 </td>
-                                <td style="border: 2px solid red;">
-                                    <img src="https://postfiles.pstatic.net/MjAxNzEwMDlfMTE5/MDAxNTA3NTQ2MzgwODI3.HHazlfm5YEvpviJd33JT03yt2aL68VAQ5f30ipCphMkg.cMJmStaWcUH_At2T-bZtsLupTfDuiT_2iZGOxl63qeog.JPEG.bingbbing1/2017-10-06-00-12-41.jpg?type=w966" width="150" height="150">
+                                <td style="border: 3px solid black;">
+                                    <img src="https://postfiles.pstatic.net/MjAyMTA2MTdfMTc3/MDAxNjIzODk2NTE0MTQz.piiQFIre9ii-l9wnUD-kGGOxY8xm0BYE4FCO_WiHS5sg.VYsysWwdohKvFUPm3HdcxZzBcCbFxVP7VbPFBTqoVQIg.JPEG.cvslife/output_3660780093.jpg?type=w773" width="150" height="150">
                                 </td>
                             </tr>
                             <tr>
-                                <td style="border: 2px solid black;">바삭 통다리 치킨</td>
-                                <td style="border: 2px solid black;">알찬 도시락</td>
-                                <td style="border: 2px solid black;">숯불 고기 김밥</td>
-                                <td style="border: 2px solid black;">김치 왕교자 그라탕</td>
-                                <td style="border: 2px solid black;">치즈 콘닭</td>
+                                <td style="border: 2px solid black;">오모가리 김치찌개 라면</td>
+                                <td style="border: 2px solid black;">미니언즈 구운계란</td>
+                                <td style="border: 2px solid black;">꼬북칩 초코츄러스맛</td>
+                                <td style="border: 2px solid black;">뭉개뭉계란 샌드위치</td>
+                                <td style="border: 2px solid black;">열떡볶이</td>
                             </tr>
                         </table>
                     </div>
@@ -86,21 +86,21 @@
                     <div class="accordion-body">
                         {% if user.is_authenticated %}
                             <strong>{{user}} 님을 위한 맞춤 제품!<br/><br/></strong>
-                         <table style="border: 1px solid red; width:60%; height: 100px; margin: auto; text-align: center;">
+                         <table style="border: 2px solid black; width:60%; height: 100px; margin: auto; text-align: center;">
                             <tr>
-                                <td style="border: 2px solid red;">
+                                <td style="border: 3px solid black;">
                                     <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxNzAxMDJfOSAg%2FMDAxNDgzMzMwNTAwNTgw.N-ReJlH9kA8XFCXWESVXNR0mszgZQYBwGV-Kz18AJVQg.8Lo-ItcHcOAc1k3IpnPxZS59yZBTmT6MgACqeoYgW08g.JPEG.kdhrc0306%2F20170102_123148.jpg&type=ofullfill340_600" width="150" height="150">
                                 </td>
-                                <td style="border: 2px solid red;">
+                                <td style="border: 3px solid black;">
                                     <img src="https://postfiles.pstatic.net/MjAxODA2MDlfMTY4/MDAxNTI4NTUwMzg1ODgy.0Aer5WHfmCZ7Q2RD3HQ_aZC4GaDwH3V8yCWje0FIS64g.dWVfEqf57IKMhi1UFR_cqpzf6cN8n__1cd6KtuChsQkg.JPEG.hmlee68/20180608_194244.jpg?type=w773" width="150" height="150">
                                 </td>
-                                <td style="border: 2px solid red;">
+                                <td style="border: 3px solid black;">
                                     <img src="https://postfiles.pstatic.net/MjAxNzA4MDNfMTkx/MDAxNTAxNzI1NzY1MjY5.6y0m4YJ5_VWLqIiICATRLgWa83J8Yc8VNushnBnjnF4g.qZW_IvTm1PHhyVyVV4XxdSrLWNWxGKp-jnwblRkfq-Eg.JPEG.oxsh29fqqo/P20170524_113524887_21735CDF-D5FE-454B-8BF9-D8626200CAB8.JPG?type=w1" width="150" height="150">
                                 </td>
-                                <td style="border: 2px solid red;">
+                                <td style="border: 3px solid black;">
                                     <img src="https://postfiles.pstatic.net/MjAxNzA0MTBfNjIg/MDAxNDkxODExNTI2MzAw.fR60jOmdI70WFhXn80prcF3iQFnFR6AhIYjFEKl7lQUg.P9LZ7ElcYkijFvI4bHQQwhlUA8GMsVSAlOE4cIAP7t4g.JPEG.ipapeo/photo_1491468476.jpg?type=w966" width="150" height="150">
                                 </td>
-                                <td style="border: 2px solid red;">
+                                <td style="border: 3px solid black;">
                                     <img src="https://postfiles.pstatic.net/MjAxNzEwMDlfMTE5/MDAxNTA3NTQ2MzgwODI3.HHazlfm5YEvpviJd33JT03yt2aL68VAQ5f30ipCphMkg.cMJmStaWcUH_At2T-bZtsLupTfDuiT_2iZGOxl63qeog.JPEG.bingbbing1/2017-10-06-00-12-41.jpg?type=w966" width="150" height="150">
                                 </td>
                             </tr>
