--- a/home/templates/search.html
+++ b/home/templates/search.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>여기있대 - Search</title>
+
         <style>
             .map_wrap, .map_wrap * {margin:0;padding:0;font-family:'Malgun Gothic',dotum,'돋움',sans-serif;font-size:12px;}
             .map_wrap a, .map_wrap a:hover, .map_wrap a:active{color:#000;text-decoration: none;}
@@ -41,7 +42,9 @@
             #pagination {margin:10px auto;text-align: center;}
             #pagination a {display:inline-block;margin-right:10px;}
             #pagination .on {font-weight: bold; cursor: default;color:#777;}
+            #fontColor {color:red;}
         </style>
+
         <!-- Bootstrap core CSS -->
         <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
         <!-- Default CSS -->
@@ -71,242 +74,123 @@
 
         <main class="container p-5 bg-lightGray rounded-3">
             <div class="map_wrap">
-                <div id="map" style="width:1000px;height:500px;position:relative;overflow:hidden;"></div>
+                <div id="map" style="width:100%;height:500px;"></div>
 
                 <div id="menu_wrap" class="bg_white">
-                    <div class="option">
-                        <div>
-                            <form onsubmit="searchPlaces(); return false;">
-                                키워드 : <input type="text" value={{ searchbox }} id="keyword" size="15"> 
-                                <button type="submit">검색하기</button> 
-                            </form>
+                    <ul id="placesList">
+                        <span class="markerbg marker_1"></span>
+                        <div class="info">
+                            <hr>
+                            <b>gs25-영통벽산점</b><br/>
+                            <b><span id="fontColor">재고 : 5개</span></b><br/>
+                            <span>경기 수원시 영통구 봉영로1744번길 11</span><br/>
+                            <span class="tel">031-206-6571</span><br/>
+                            <hr>
+                            <b>gs25-흥덕중앙점</b><br/>
+                            <b><span id="fontColor">재고 : 3개</span></b><br/>
+                            <span>경기 용인시 기흥구 흥덕중앙로105번길 41</span><br/>
+                            <span class="tel">031-211-4655</span><br/>
+                            <hr>
+                            <b>gs25-흥덕행복점</b><br/>
+                            <b><span id="fontColor">재고 : 2개</span></b><br/>
+                            <span>경기 용인시 기흥구 흥덕2로75번길 22</span><br/>
+                            <span class="tel">031-216-7522</span><br/>
+                            <hr>
+                            <b>gs25-기흥흥덕로점</b><br/>
+                            <b><span id="fontColor">재고 : 1개</span></b><br/>
+                            <span>경기 용인시 기흥구 흥덕4로30번길 28-25</span><br/>
+                            <span class="tel">1644-5425</span><br/>
+                            <hr>
+                            <b>세븐일레븐-기흥영덕점</b><br/>
+                            <b><span id="fontColor">재고 : 1개</span></b><br/>
+                            <span>경기 용인시 기흥구 흥덕4로16번길 4-16</span><br/>
+                            <span class="tel">031-216-9180</span><br/>
+                            <hr>
                         </div>
-                    </div>
-                    <hr>
-                    <ul id="placesList"></ul>
+                    </ul>
                     <div id="pagination"></div>
                 </div>
             </div>
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5419e2c653cfd6f946d7db6bcabf4b7d&libraries=services"></script>
-<script>
 
-// 마커를 담을 배열입니다
-var markers = [];
+            <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5419e2c653cfd6f946d7db6bcabf4b7d&libraries=services"></script>
+            <script>
+                var mapContainer = document.getElementById('map'), // 지도 표시 div  
+                    mapOption = { 
+                        center: new kakao.maps.LatLng(37.274431, 127.071620), // 지도 중심좌표
+                        level: 5 // 지도 확대 레벨
+                    };
+                
+                // 지도 생성
+                var map = new kakao.maps.Map(mapContainer, mapOption);
+                
+                // 일반 지도와 스카이뷰로 지도 타입을 전환할 수 있는 지도타입 컨트롤을 생성
+                var mapTypeControl = new kakao.maps.MapTypeControl();
 
-var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
-    mapOption = {
-        center: new kakao.maps.LatLng(37.566826, 126.9786567), // 지도의 중심좌표
-        level: 3 // 지도의 확대 레벨
-    };  
+                // 지도에 컨트롤을 추가
+                // kakao.maps.ControlPosition은 컨트롤이 표시될 위치를 정의 (TOPRIGHT는 오른쪽 위를 의미)
+                map.addControl(mapTypeControl, kakao.maps.ControlPosition.TOPRIGHT);
 
-// 지도를 생성합니다    
-var map = new kakao.maps.Map(mapContainer, mapOption); 
+                // 지도 확대 축소를 제어할 수 있는 줌 컨트롤 생성
+                var zoomControl = new kakao.maps.ZoomControl();
+                map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
 
-// 장소 검색 객체를 생성합니다
-var ps = new kakao.maps.services.Places();  
+                // 마커를 표시할 위치와 내용을 가지고 있는 객체 배열
+                var positions = [
+                    {
+                        content: 'GS25-영통벽산점', 
+                        latlng: new kakao.maps.LatLng(37.266637, 127.083051)
+                    },
+                    {
+                        content: 'GS25-흥덕중앙점', 
+                        latlng: new kakao.maps.LatLng(37.281016, 127.076604)
+                    },
+                    {
+                        content: 'GS25-흥덕행복점', 
+                        latlng: new kakao.maps.LatLng(37.274431, 127.071620)
+                    },
+                    {
+                        content: 'GS25-기흥흥덕로점',
+                        latlng: new kakao.maps.LatLng(37.273150, 127.091554)
+                    },
+                    {
+                        content: '세븐일레븐-기흥영덕점',
+                        latlng: new kakao.maps.LatLng(37.272166, 127.091030)
+                    }
+                ];
 
-// 검색 결과 목록이나 마커를 클릭했을 때 장소명을 표출할 인포윈도우를 생성합니다
-var infowindow = new kakao.maps.InfoWindow({zIndex:1});
+                for (var i = 0; i < positions.length; i ++) {
+                    // 마커 생성
+                    var marker = new kakao.maps.Marker({
+                        map: map, // 마커 표시할 지도
+                        position: positions[i].latlng // 마커 위치
+                    });
 
-// 키워드로 장소를 검색합니다
-searchPlaces();
+                    // 마커 표시 인포윈도우 생성 
+                    var infowindow = new kakao.maps.InfoWindow({
+                        content: positions[i].content // 인포윈도우 내용
+                    });
 
-// 키워드 검색을 요청하는 함수입니다
-function searchPlaces() {
-
-    var keyword = document.getElementById('keyword').value;
-
-    if (!keyword.replace(/^\s+|\s+$/g, '')) {
-        alert('키워드를 입력해주세요!');
-        return false;
-    }
-
-    // 장소검색 객체를 통해 키워드로 장소검색을 요청합니다
-    ps.keywordSearch( keyword, placesSearchCB); 
-}
-
-// 장소검색이 완료됐을 때 호출되는 콜백함수 입니다
-function placesSearchCB(data, status, pagination) {
-    if (status === kakao.maps.services.Status.OK) {
-
-        // 정상적으로 검색이 완료됐으면
-        // 검색 목록과 마커를 표출합니다
-        displayPlaces(data);
-
-        // 페이지 번호를 표출합니다
-        displayPagination(pagination);
-
-    } else if (status === kakao.maps.services.Status.ZERO_RESULT) {
-
-        alert('검색 결과가 존재하지 않습니다.');
-        return;
-
-    } else if (status === kakao.maps.services.Status.ERROR) {
-
-        alert('검색 결과 중 오류가 발생했습니다.');
-        return;
-
-    }
-}
-
-// 검색 결과 목록과 마커를 표출하는 함수입니다
-function displayPlaces(places) {
-
-    var listEl = document.getElementById('placesList'), 
-    menuEl = document.getElementById('menu_wrap'),
-    fragment = document.createDocumentFragment(), 
-    bounds = new kakao.maps.LatLngBounds(), 
-    listStr = '';
-    
-    // 검색 결과 목록에 추가된 항목들을 제거합니다
-    removeAllChildNods(listEl);
-
-    // 지도에 표시되고 있는 마커를 제거합니다
-    removeMarker();
-    
-    for ( var i=0; i<places.length; i++ ) {
-
-        // 마커를 생성하고 지도에 표시합니다
-        var placePosition = new kakao.maps.LatLng(places[i].y, places[i].x),
-            marker = addMarker(placePosition, i), 
-            itemEl = getListItem(i, places[i]); // 검색 결과 항목 Element를 생성합니다
-
-        // 검색된 장소 위치를 기준으로 지도 범위를 재설정하기위해
-        // LatLngBounds 객체에 좌표를 추가합니다
-        bounds.extend(placePosition);
-
-        // 마커와 검색결과 항목에 mouseover 했을때
-        // 해당 장소에 인포윈도우에 장소명을 표시합니다
-        // mouseout 했을 때는 인포윈도우를 닫습니다
-        (function(marker, title) {
-            kakao.maps.event.addListener(marker, 'mouseover', function() {
-                displayInfowindow(marker, title);
-            });
-
-            kakao.maps.event.addListener(marker, 'mouseout', function() {
-                infowindow.close();
-            });
-
-            itemEl.onmouseover =  function () {
-                displayInfowindow(marker, title);
-            };
-
-            itemEl.onmouseout =  function () {
-                infowindow.close();
-            };
-        })(marker, places[i].place_name);
-
-        fragment.appendChild(itemEl);
-    }
-
-    // 검색결과 항목들을 검색결과 목록 Elemnet에 추가합니다
-    listEl.appendChild(fragment);
-    menuEl.scrollTop = 0;
-
-    // 검색된 장소 위치를 기준으로 지도 범위를 재설정합니다
-    map.setBounds(bounds);
-}
-
-// 검색결과 항목을 Element로 반환하는 함수입니다
-function getListItem(index, places) {
-
-    var el = document.createElement('li'),
-    itemStr = '<span class="markerbg marker_' + (index+1) + '"></span>' +
-                '<div class="info">' +
-                '   <h5>' + places.place_name + '</h5>';
-
-    if (places.road_address_name) {
-        itemStr += '    <span>' + places.road_address_name + '</span>' +
-                    '   <span class="jibun gray">' +  places.address_name  + '</span>';
-    } else {
-        itemStr += '    <span>' +  places.address_name  + '</span>'; 
-    }
-                 
-      itemStr += '  <span class="tel">' + places.phone  + '</span>' +
-                '</div>';           
-
-    el.innerHTML = itemStr;
-    el.className = 'item';
-
-    return el;
-}
-
-// 마커를 생성하고 지도 위에 마커를 표시하는 함수입니다
-function addMarker(position, idx, title) {
-    var imageSrc = 'https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/marker_number_blue.png', // 마커 이미지 url, 스프라이트 이미지를 씁니다
-        imageSize = new kakao.maps.Size(36, 37),  // 마커 이미지의 크기
-        imgOptions =  {
-            spriteSize : new kakao.maps.Size(36, 691), // 스프라이트 이미지의 크기
-            spriteOrigin : new kakao.maps.Point(0, (idx*46)+10), // 스프라이트 이미지 중 사용할 영역의 좌상단 좌표
-            offset: new kakao.maps.Point(13, 37) // 마커 좌표에 일치시킬 이미지 내에서의 좌표
-        },
-        markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize, imgOptions),
-            marker = new kakao.maps.Marker({
-            position: position, // 마커의 위치
-            image: markerImage 
-        });
-
-    marker.setMap(map); // 지도 위에 마커를 표출합니다
-    markers.push(marker);  // 배열에 생성된 마커를 추가합니다
-
-    return marker;
-}
-
-// 지도 위에 표시되고 있는 마커를 모두 제거합니다
-function removeMarker() {
-    for ( var i = 0; i < markers.length; i++ ) {
-        markers[i].setMap(null);
-    }   
-    markers = [];
-}
-
-// 검색결과 목록 하단에 페이지번호를 표시는 함수입니다
-function displayPagination(pagination) {
-    var paginationEl = document.getElementById('pagination'),
-        fragment = document.createDocumentFragment(),
-        i; 
-
-    // 기존에 추가된 페이지번호를 삭제합니다
-    while (paginationEl.hasChildNodes()) {
-        paginationEl.removeChild (paginationEl.lastChild);
-    }
-
-    for (i=1; i<=pagination.last; i++) {
-        var el = document.createElement('a');
-        el.href = "#";
-        el.innerHTML = i;
-
-        if (i===pagination.current) {
-            el.className = 'on';
-        } else {
-            el.onclick = (function(i) {
-                return function() {
-                    pagination.gotoPage(i);
+                    // 마커에 mouseover 이벤트와 mouseout 이벤트를 등록
+                    // 이벤트 리스너로는 클로저를 만들어 등록
+                    // for문에서 클로저를 만들어 주지 않으면 마지막 마커에만 이벤트가 등록
+                    kakao.maps.event.addListener(marker, 'mouseover', makeOverListener(map, marker, infowindow));
+                    kakao.maps.event.addListener(marker, 'mouseout', makeOutListener(infowindow));
                 }
-            })(i);
-        }
 
-        fragment.appendChild(el);
-    }
-    paginationEl.appendChild(fragment);
-}
+                // 인포윈도우를 표시하는 클로저를 만드는 함수
+                function makeOverListener(map, marker, infowindow) {
+                    return function() {
+                        infowindow.open(map, marker);
+                    };
+                }
 
-// 검색결과 목록 또는 마커를 클릭했을 때 호출되는 함수입니다
-// 인포윈도우에 장소명을 표시합니다
-function displayInfowindow(marker, title) {
-    var content = '<div style="padding:5px;z-index:1;">' + title + '</div>';
-
-    infowindow.setContent(content);
-    infowindow.open(map, marker);
-}
-
- // 검색결과 목록의 자식 Element를 제거하는 함수입니다
-function removeAllChildNods(el) {   
-    while (el.hasChildNodes()) {
-        el.removeChild (el.lastChild);
-    }
-}
-</script>
+                // 인포윈도우를 닫는 클로저를 만드는 함수
+                function makeOutListener(infowindow) {
+                    return function() {
+                        infowindow.close();
+                    };
+                }
+            </script>
         </main>
     </body>
 </html>
